--- a/module-3-solution/index.html
+++ b/module-3-solution/index.html
@@ -163,7 +163,7 @@
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a href="#home" class="visible-xs visible-sm">Back to top</a></p>
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a href="#home" class="visible-lg visible-md visible-xs visible-sm">Back to top</a></p>
         </article>
       </div>
     </section>
